--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Hello from Docker</title>
 </head>
 <body>
-    <h1>Hello, Docker World!</h1>
+    <h1>Hello, Docker World V2!</h1>
 </body>
 </html>
